<resources>
    <string name="app_name">CS5520_Mindfull</string>
    <string name="signin_button">Sign In</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="next">Next</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="Close">Close</string>
    <string name="Open">Close</string>
    <string-array name="sort_by_dropdown">
        <item>Date</item>
        <item>A - Z</item>
        <item>Z - A</item>
    </string-array>
    <string name="calm">Calm</string>
    <string name="anxious">Anxious</string>
    <string name="excited">Excited</string>
    <string name="bored">Bored</string>
    <string name="username_value">_</string>
    <string name="token_value">_</string>
</resources>