<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoodTrackingActivityFirst">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="42dp"
        android:layout_height="17dp"
        android:text="@string/sad"
        app:layout_constraintBottom_toTopOf="@+id/sad_slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sad_slider"
        android:layout_width="211dp"
        android:layout_height="72dp"
        android:rotation="270"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522"
        app:thumbColor="@color/purple_active"
        app:trackColorActive="@color/purple_active"
        app:trackColorInactive="@color/purple_inactive" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happy"
        app:layout_constraintBottom_toTopOf="@+id/happy_slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/happy_slider"
        android:layout_width="211dp"
        android:layout_height="72dp"
        android:rotation="270"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toEndOf="@+id/sad_slider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523"
        app:thumbColor="@color/purple_active"
        app:trackColorActive="@color/purple_active"
        app:trackColorInactive="@color/purple_inactive" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        />

</androidx.constraintlayout.widget.ConstraintLayout>