<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        tools:layout_editor_absoluteX="107dp"-->
<!--        tools:layout_editor_absoluteY="157dp">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome to"
                android:layout_marginTop="64dp"
                android:textColor="@color/primary"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                tools:layout_editor_absoluteX="92dp" />

            <TextView
                android:id="@+id/enter_your_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/enter_username"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/input_username"
                android:layout_width="274dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:inputType="text" />

            <TextView
                android:id="@+id/enter_your_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="20dp"
                android:text="@string/enter_password" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="274dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/signin_button" />

        </LinearLayout>


    </ScrollView>

    <!--        </LinearLayout>-->
<!--    </ScrollView>-->


</androidx.constraintlayout.widget.ConstraintLayout>